# localotaku-tgbot

./: CHANGELOG.md  README.md  lotgbot_cfg.toml  pyproject.toml
src/localotaku_tgbot/: __init__.py  config.py  loader.py
src/localotaku_tgbot/entites/: core.py
src/localotaku_tgbot/utils/: default_commands.py  logger.py  trie.py
